# agentura

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  agent.py  auth.py  docker-compose.yml  gateway-nginx.conf  go.mod  go.sum  hosts.json  mcp_backend.py  mcp_server.py  ogham_board.py  pyproject.toml  schema.sql  server.py  sidecar.py  sidecar_ipc.py  tmux_tools.py
.claude/: CLAUDE.md
.claude/commands/: bootstrap-team.md  brainstorm.md  introduce.md  rsvp.md  standup.md  team-approve.md
.gemini/: GEMINI.md
cmd/agentura-backend/: main.go
cmd/agentura-clock/: main.go  main_test.go
cmd/agentura-mcp/: main.go
cmd/agentura-mcp-backend/: main.go
cmd/agentura-run/: main.go  main_test.go
cmd/launcher/: main.go
hooks/: pre-commit
internal/api/: client.go
internal/auth/: agent.go  agent_test.go  client.go  client_test.go  sshconfig.go  sshconfig_test.go  util.go
internal/config/: url.go
internal/sidecar/: ipc.go  ipc_test.go  sidecar.go  sidecar_test.go
internal/tmux/: capture.go  inject.go  tui_to_md.go  tui_to_md_test.go  util.go
internal/tools/: agents.go  agents_test.go  backend.go  clock_test.go  messaging.go  teams.go  util.go
tests/: helpers.py  mock_agent.py  test_board.py  test_broadcast.py  test_chat.py  test_read_stream.py  test_remote.py  test_sidecar_ipc.py  test_sprint.py  test_teams_auth.py
