[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agentura"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "cryptography",
]

[tool.setuptools]
py-modules = ["server", "mcp_server", "mcp_backend", "auth", "tmux_tools", "sidecar", "sidecar_ipc"]

# agent-run and agentura-mcp are now Go binaries (see Makefile).
# Python entry points kept only for the server and local MCP fallback.
[project.scripts]
agentura-mcp-py = "mcp_server:mcp.run"
