[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agentura"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "cryptography",
]

[tool.setuptools]
py-modules = ["server", "auth"]

# agent-run, agentura-mcp, agentura-mcp-backend are Go binaries (see Makefile).
# server.py stays Python (runs in Docker, no portability concern).
